[gd_scene load_steps=2 format=3 uid="uid://bp8x2n4m5h7qw"]

[ext_resource type="Script" path="res://scripts/ui/MainMenuController.gd" id="1_controller"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_controller")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="ColorRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.094, 0.094, 0.125, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 600)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/MenuPanel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MenuPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "POKEMON BATTLE
SIMULATOR"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Competitive Battle Engine"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="MenuButtons" type="VBoxContainer" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TeamBuilderButton" type="Button" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Team Builder"

[node name="QuickBattleButton" type="Button" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Quick Battle (vs AI)"

[node name="MultiplayerButton" type="Button" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
disabled = true
text = "Multiplayer (Coming Soon)"

[node name="SettingsButton" type="Button" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Exit"

[node name="Spacer2" type="Control" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VersionLabel" type="Label" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "v0.2.0 - Phase 2 Week 8"
horizontal_alignment = 1

[node name="CreditLabel" type="Label" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Built with Godot 4.5"
horizontal_alignment = 1
